univention-system-setup (13.0.10-1) unstable; urgency=medium

  * Bug #56832: UCS 5.0-6 version bump
  * Bug #34106: Fix SSL certificate renewal

 -- Philipp Hahn <hahn@univention.de>  Sat, 09 Dec 2023 15:05:00 +0100

univention-system-setup (13.0.9-3) unstable; urgency=medium

  * Bug #56357: Remove link to deprecated Univention Wiki

 -- Nico Gulden <gulden@univention.de>  Thu, 27 Jul 2023 18:24:12 +0200

univention-system-setup (13.0.9-2) unstable; urgency=medium

  * Bug #56201: replace python-notifier and adjust to new UMC module API

 -- Florian Best <best@univention.de>  Tue, 27 Jun 2023 16:15:49 +0200

univention-system-setup (13.0.9-1) unstable; urgency=medium

  * Bug #43633: change systemd dependency to
    univention-management-console-server.service

 -- Florian Best <best@univention.de>  Mon, 12 Jun 2023 07:47:14 +0200

univention-system-setup (13.0.8-1) unstable; urgency=medium

  * Bug #43633: replace direct use of notifier.threads with UMC
    @threaded decorator

 -- Florian Best <best@univention.de>  Sun, 11 Jun 2023 10:12:29 +0200

univention-system-setup (13.0.7-1) unstable; urgency=medium

  * Bug #55922: replace systemctl with deb-systemd-invoke for UMC
    restarts

 -- Florian Best <best@univention.de>  Sun, 11 Jun 2023 08:32:23 +0200

univention-system-setup (13.0.6-5) unstable; urgency=medium

  * Bug #55632: improved the Python 3.11 compatiblity

 -- Florian Best <best@univention.de>  Tue, 30 May 2023 11:40:17 +0200

univention-system-setup (13.0.6-4) unstable; urgency=low

  * Bug #55632: improved the Python 3.11 compatiblity

 -- Philipp Hahn <hahn@univention.de>  Fri, 26 May 2023 10:41:37 +0200

univention-system-setup (13.0.6-3) unstable; urgency=medium

  * Bug #55632: improved the Python 3.11 compatiblity

 -- Mika Westphal <westphal@univention.de>  Fri, 28 Apr 2023 10:13:08 +0200

univention-system-setup (13.0.6-2) unstable; urgency=medium

  * Bug #42330: Remove old maintainer script package update code
